refactor(just-documentation): improve documentation sidebar and docs generation

--- a/docs/1. Server.md
+++ b/docs/1. Server.md
@@ -3,13 +3,13 @@
 ## Setup
 
 1. Debian
-2. Intall packages: `lm-sensors`, `cron`, `docker`
+2. Intall packages: `lm-sensors`, `docker`
 3. Enable SSH server, disable password login
-4. Add docker vm options:
+4. Add docker vm options to `/etc/sysctl.conf`:
 
 ```
-sysctl -w vm.max_map_count=262144
-sysctl -w vm.overcommit_memory=1
+vm.max_map_count=262144
+vm.overcommit_memory=1
 ```
 
 5. Add own user
