--- a/docs/2. Structure.md
+++ b/docs/2. Structure.md
@@ -5,6 +5,7 @@ Thus, to keep things simple and organized, there are some rules to follow:
 
 ## Repo Rules
 
+- Every project (lib or app) is located under [`packages`](../packages).
 - Project name = path to project directory, separated by `-` without the `packages` folder.
   E.g. `just` for `packages/just` and `just-documentation` for `packages/just/documentation`.
 - Project targets are inferred via plugins if possible to avoid duplicated tasks.
